--- a/assets/style/our-services.css
+++ b/assets/style/our-services.css
@@ -25,6 +25,26 @@ p.fw-light {
     width: 34px;
 }
 
+.bg-img-1 {
+    height: 460px;
+    background-image: url("../images/services-img-3.png");
+    background-size: cover;
+    object-fit: cover;    
+}
+
+.bg-img-2 {
+    height: 460px;
+    background-image: url("../images/services-img-4.png");
+    background-size: cover;
+    object-fit: cover;    
+}
+
+.bg-img-1 p, .bg-img-2 p {
+    color: white !important;
+    z-index: 1000;
+    filter: brightness(100%) !important;
+}
+
 @media (max-width: 575px) {
     .wrapper-hero-img {
         margin-top: 0;
