--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,7 +63,7 @@ footer .footer-konten {
 
 .footer-konten-text p, .menu-map {
     color: #1C4576;
-    font-weight: 100;
+    font-weight: 100 !important;
     font-size: 16px;
     text-decoration: none;
 }
